# ai-research-workspace-saas

./: .env.example  .gitignore  AGENTS.md  README.md
apps/api/: alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: README  env.py
apps/api/alembic/versions/: 202605010001_initial_domain_models.py  202605020001_add_crud_api_support_fields.py  202605020002_correct_research_lab_domain_model.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: base.py  init_db.py  session.py
apps/api/app/models/: __init__.py  agent_output.py  ai_analysis_agent_config.py  conversation.py  conversation_message.py  enums.py  file.py  knowledge_base.py  project.py  project_source_selection.py  project_team_member.py  project_workflow.py  project_workflow_step.py  source_material.py  task.py  thought_chain.py  user.py  workspace.py
apps/api/app/schemas/: __init__.py  agent_output.py  ai_analysis_agent_config.py  auth.py  common.py  conversation.py  conversation_message.py  file.py  knowledge_base.py  project.py  project_source_selection.py  project_team_member.py  project_workflow.py  project_workflow_step.py  source_material.py  task.py  thought_chain.py  user.py  workspace.py
apps/api/app/services/: agent_config_service.py  auth_service.py  common.py  conversation_service.py  file_service.py  knowledge_base_service.py  output_service.py  project_service.py  project_source_service.py  project_team_service.py  source_material_service.py  (+5 more)
apps/api/scripts/: check_db.py  create_default_admin.py
(+141 files in other folders)
